--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
 		"type": "git",
 		"url": "git://github.com/vanng822/facebook-nodejs.git"
 	},
+	"bugs": {
+		"url": "https://github.com/vanng822/facebook-nodejs/issues"
+	},
 	"version": "0.3.4"
 }
