--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
 	"bugs": {
 		"url": "https://github.com/vanng822/facebook-nodejs/issues"
 	},
+	"licenses": [
+		{
+			"type": "MIT",
+			"url": "https://github.com/vanng822/facebook-nodejs/blob/master/LICENSE"
+		}
+	],
 	"version": "0.3.8"
 }
