--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 sudo: false
 node_js:
-  - "0.10"
-  - "0.12"
+  - "6"
+  - "8"
+  - "9"
   - "stable"
+install:
+  - npm install
 script:
   - npm test
